Edge:
* Can explicitly specify available types for STI tables instead of automatically discovering them with "SELECT DISTINCT type FROM <table>" (Cedric Maion).
* Don't try to run rake tasks for Capistrano if there's no Rakefile - eg. on fresh deploys (Nathan Smith).
* Populate search results before comparing with #==.
* Can indicate whether Sphinx should use a socket for connections instead of TCP (Simon Hürlimann).
* Can have just attribute values returned as search results using `:attributes_only => true` in a search call (Andrew Hunter).
* Can specify additional local indices for the generated distributed index (usually one per model) (Andrew Hunter).
* Supporting Sphinx 2.0.4 (Ilia Lobsanov).
* Load MySQL SSL settings from database.yml (James Brooks).
* Adding Sphinx 2.0.3 support (identical to 2.1.0).
* Dropping Rails 1.2 and 2.0.x support.
* Association keys now are the association stacks as arrays - more reliable in Rubinius.
* Can now determine PostgreSQL versions with JRuby.
* Many testing tweaks.
* Allow for rank_expr option being passed through to Riddle.

1.4.11 - January 2nd 2011
* Handle no results for total_pages and total_entries with defaults of 0.
* No longer shuffle Sphinx addresses by default.
* Fix coalescing of non-char values in PostgreSQL (Matthew Barnett).
* Default database user for Sphinx configuration is now ENV['USER'], not root.
* Alias offset to offset_value for Kaminari.
* Sphinx 2.1.0-dev support.

1.4.10 - November 4th 2011
* Updating Riddle references for impending 1.5.0 release of Riddle.
* Handle out-of-date indexed_models references.
* Fixing STI model handling during context index loading (Kenn Ejima).

1.4.9 - October 10th 2011
* Fixing invalid gemspec.

1.4.8 - October 10th 2011
* Adding smart default (id) for primary key column name.
* Making error message when daemon fails to start a little more helpful (Tony Pitale).
* Adding ThinkingSphinx::Search#last_page? for Kaminari (Pete Deffendol).