@@ -10,7 +10,7 @@ class Riddle::AutoVersion
       require 'riddle/1.10'
     when /2.0.[12]/
       require 'riddle/2.0.1'
-    when /2.0.3/, /2.1.\d/
+    when /2.0.3/, /2.0.4/, /2.1.\d/
       require 'riddle/2.1.0'
     end
   end
