@@ -1,3 +1,3 @@
 module Riddle
-  Version = '1.5.1'
+  Version = '1.5.2'
 end
