@@ -1,4 +1,5 @@
 Edge:
+* Updating Riddle references to 1.5.2.
 * Can explicitly specify available types for STI tables instead of automatically discovering them with "SELECT DISTINCT type FROM <table>" (Cedric Maion).
 * Don't try to run rake tasks for Capistrano if there's no Rakefile - eg. on fresh deploys (Nathan Smith).
 * Populate search results before comparing with #==.
